--- a/app/src/main/res/layout/personal_detail.xml
+++ b/app/src/main/res/layout/personal_detail.xml
@@ -5,6 +5,6 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:text="name"
+        android:text="@string/name"
         android:layout_height="wrap_content" />
 </LinearLayout>
