--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,12 +7,13 @@
     tools:context=".MainActivity">
 
     <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="30dp"
-        android:layout_gravity="center_horizontal"
-        android:onClick="">
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@drawable/style_button_add_contact"
+        style="@style/button_text">
 
-        <Button
+        <ImageView
+            android:layout_centerHorizontal="true"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:background="@drawable/add_1" />
