--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,23 +2,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="5dp"
     android:background="@drawable/family_background"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <RelativeLayout
+    <Button
+        android:layout_centerHorizontal="true"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:background="@drawable/style_button_add_contact"
-        style="@style/button_text">
-
-        <ImageView
-            android:layout_centerHorizontal="true"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/add_1" />
-
-    </RelativeLayout>
+        android:text="@string/label_add"
+        android:textSize="25sp"
+        android:background="@drawable/button_add_contact"
+        style="@style/button_text"
+        android:onClick="addContact"/>
 
     <ListView
         android:id="@+id/lv"
