--- a/app/src/main/res/layout/activity_add_contact.xml
+++ b/app/src/main/res/layout/activity_add_contact.xml
@@ -1,7 +1,78 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="5dp"
+    android:background="@drawable/family_background"
+    android:orientation="vertical"
     tools:context="qilin.caiqiaolinpan.activity.AddContactActivity">
 
-</RelativeLayout>
+    <ImageView
+        android:id="@+id/iv_choose_avatar"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/profile" />
+
+    <LinearLayout
+        android:paddingTop="30dp"
+        android:paddingBottom="30dp"
+        android:paddingLeft="50dp"
+        android:paddingRight="50dp"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="@dimen/activity_add_contact_tv_width"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/activity_add_contact_text_size"
+                android:text="@string/activity_new_contact_tv_name" />
+
+            <EditText
+                android:id="@+id/et_new_contact_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text"
+                android:textSize="@dimen/activity_add_contact_text_size" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="@dimen/activity_add_contact_tv_width"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/activity_add_contact_text_size"
+                android:text="@string/activity_new_contact_tv_phone" />
+
+            <EditText
+                android:id="@+id/et_new_contact_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="phone"
+                android:textSize="@dimen/activity_add_contact_text_size" />
+
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <Button
+        android:layout_centerHorizontal="true"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/btn_height"
+        android:text="@string/label_add"
+        android:textSize="@dimen/btn_text_size"
+        android:background="@drawable/button_add_contact"
+        style="@style/button_text"
+        android:onClick="addContact" />
+
+</LinearLayout>
