--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,9 @@
     <Button
         android:layout_centerHorizontal="true"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="@dimen/btn_height"
         android:text="@string/label_add"
-        android:textSize="25sp"
+        android:textSize="@dimen/btn_text_size"
         android:background="@drawable/button_add_contact"
         style="@style/button_text"
         android:onClick="addContact"/>
