--- a/app/src/main/res/layout/activity_add_contact.xml
+++ b/app/src/main/res/layout/activity_add_contact.xml
@@ -8,6 +8,7 @@
     tools:context="qilin.caiqiaolinpan.activity.AddContactActivity">
 
     <ImageView
+        android:layout_marginTop="30dp"
         android:id="@+id/iv_choose_avatar"
         android:layout_width="180dp"
         android:layout_height="180dp"
@@ -17,8 +18,8 @@
     <LinearLayout
         android:paddingTop="30dp"
         android:paddingBottom="30dp"
-        android:paddingLeft="50dp"
-        android:paddingRight="50dp"
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -59,6 +60,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="phone"
+                android:textSize="@dimen/activity_add_contact_text_size" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:layout_width="@dimen/activity_add_contact_tv_width"
+                android:layout_height="wrap_content"
+                android:textSize="@dimen/activity_add_contact_text_size"
+                android:text="@string/activity_new_contact_tv_dob" />
+
+            <EditText
+                android:id="@+id/et_new_contact_dob"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:editable="false"
                 android:textSize="@dimen/activity_add_contact_text_size" />
 
         </LinearLayout>
