--- a/app/src/main/res/layout/activity_add_contact.xml
+++ b/app/src/main/res/layout/activity_add_contact.xml
@@ -2,18 +2,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="5dp"
+    android:padding="@dimen/page_padding"
     android:background="@drawable/family_background"
     android:orientation="vertical"
     tools:context="qilin.caiqiaolinpan.activity.AddContactActivity">
 
     <ImageView
-        android:layout_marginTop="30dp"
         android:id="@+id/iv_choose_avatar"
+        android:layout_marginTop="30dp"
         android:layout_width="180dp"
         android:layout_height="180dp"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/profile" />
+        android:src="@drawable/profile_0" />
 
     <LinearLayout
         android:paddingTop="30dp"
