--- a/app/src/main/res/layout/lv_person_item.xml
+++ b/app/src/main/res/layout/lv_person_item.xml
@@ -9,7 +9,7 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_margin="10dp"
-        android:src="@drawable/profile_wangbei" />
+        android:src="@drawable/profile_1" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,7 +22,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="5dp"
-            android:text="爸爸"
+            android:text="sdfsdfa"
             android:textColor="#000000"
             android:textSize="24sp" />
                                      
@@ -31,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:text="18080902763"
+            android:text="180809asdfsadff"
             android:textColor="#000000"
             android:textSize="16sp" />
     </LinearLayout>
