--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,5 @@
     <dimen name="activity_add_contact_text_size">25sp</dimen>
     <dimen name="btn_height">40dp</dimen>
     <dimen name="btn_text_size">25sp</dimen>
+    <dimen name="page_padding">5dp</dimen>
 </resources>
