--- a/app/src/main/res/layout/activity_choose_avatar.xml
+++ b/app/src/main/res/layout/activity_choose_avatar.xml
@@ -4,18 +4,14 @@
     android:layout_height="match_parent"
     android:padding="@dimen/page_padding"
     android:background="@drawable/family_background"
-    tools:context="qilin.caiqiaolinpan.ImageAdapter">
+    tools:context="qilin.caiqiaolinpan.ChooseAvatarActivity">
 
 
     <GridView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/gv"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:columnWidth="90dp"
-        android:numColumns="auto_fit"
-        android:verticalSpacing="10dp"
-        android:horizontalSpacing="10dp"
-        android:stretchMode="columnWidth"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:numColumns="3"
         android:gravity="center" />
 
 </LinearLayout>
