--- a/app/src/main/res/layout/activity_add_contact.xml
+++ b/app/src/main/res/layout/activity_add_contact.xml
@@ -8,7 +8,7 @@
     tools:context="qilin.caiqiaolinpan.activity.AddContactActivity">
 
     <ImageView
-        android:id="@+id/iv_choose_avatar"
+        android:id="@+id/iv_choose_profile_picture"
         android:layout_marginTop="30dp"
         android:layout_width="180dp"
         android:layout_height="180dp"
